edit the position the header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,13 +36,12 @@ body {
 /* Header Section  */
 header {
   background-color: teal;
-  position: fixed;
+  position: sticky;
   top: 0;
-  width: 100%;
   z-index: 10;
 }
 
-.content {
+header .content {
   display: flex;
   justify-content: space-between;
   align-items: center;
